# PAT

./: 1004rank.cpp  1005_3n+1.cpp  1006.cpp  1007.cpp  1009.cpp  1009_1.cpp  1011.cpp  1013_the_first.cpp  1014.cpp  CMakeLists.txt
1001/: 10001.cpp  1001.cpp  testsprintf.cpp
1005/: 1005cast.cpp  1005castsecond.cpp  1005spellvector.cpp  1005stack.cpp  spellitright.cpp
1006/: 1006.cpp
1007/: 1007test.cpp  SolutionForRobber.cpp  SolutionForRobber.h  climbStairs.cpp  robahouse.cpp  最大子列和问题.md
1034/: headofgang.cpp  headofgangexample.cpp  practiceMap.cpp
1053/: 1053.cpp  cppusescanf.cpp
1087/: 1087.cpp
1091/: 1091.cpp  1091.md
1091/BFS/: BFS.cpp
1098/: 1098.cpp  1098.md
111/: 111test0.cpp  111use_new.cpp
20210206/: 1097.md  1098.md  testvector.cpp
Past/: 1001.cpp  1006.c  1008.cpp  1008_2.cpp  1011(example).cpp  1013.cpp  1013_the_second.cpp  1013_the_third.cpp
for_fun/: justforfun.cpp  testforliyajun.cpp
